SERVER-64730 Interrupt ongoing refreshes after entering into the critical section