src/mongo/db/s/shard_filtering_metadata_refresh.cpp
@@ -329,8 +329,7 @@ bool joinShardVersionOperation(OperationContext* opCtx,
         try {
             inRecoverOrRefresh->get(opCtx);
         } catch (const ExceptionFor<ErrorCodes::ShardVersionRefreshCanceled>&) {
-            // The ongoing refresh has finished, although it was canceled by a
-            // 'clearFilteringMetadata'.
+            // The ongoing refresh has finished, although it was interrupted.
         }
 
         return true;
@@ -434,7 +433,8 @@ SharedSemiFuture<void> recoverRefreshShardVersion(ServiceContext* serviceContext
             if (cancellationToken.isCanceled() &&
                 (status.isOK() || status == ErrorCodes::Interrupted)) {
                 uasserted(ErrorCodes::ShardVersionRefreshCanceled,
-                          "Shard version refresh canceled by a 'clearFilteringMetadata'");
+                          "Shard version refresh canceled by an interruption, probably due to a "
+                          "'clearFilteringMetadata'");
             }
             return status;
         })
